# CustomerDaisy

./: .env  .env.development  .env.example  .env.production  .gitignore  PUSH_TO_GITHUB.md  README.md  REAL_ADDRESS_FIX_SUMMARY.md  SECURITY_SETUP.md  SMS_ENHANCEMENT_PLAN.md  WEB_APPLICATION_CONVERSION_GUIDE.md  config.ini  create_export_zip.bat  main.py  package-lock.json  package.json  setup.bat  tailwind.config.js  test_real_addresses.py
archive/data/: performance_report_20250719_012644.json  performance_report_20250719_020418.json
archive/development/: 2025-07-19-command-messagespawn-is-runningcommand-messag.txt  2025-07-21-command-messageinit-is-analyzing-your-codebase.txt  debug_cancellation.py  enterprise_improvements.py  main2.py  performance_optimizations.py
archive/docs/: CHANGELOG.md  COMPLETE_TEST_RESULTS.md  COMPREHENSIVE_FUNCTIONALITY_VALIDATION_REPORT.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  CONFIGURATION_IMPROVEMENTS_DEMO.md  ENHANCED_UX_SUMMARY.md  FINAL_STATUS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  (+4 more)
data/: customers.db  customers_backup.json
export/: CLAUDE.md  FINAL_COMPLETE_FIXES.md  PRODUCTION_NOTES.md  README_EXPORT.md  SMS_FIXES_READY.md  create_zip.bat  launch.bat  launch_old.bat  main.py  pyproject.toml  setup.bat  setup_old.bat
export/src/: __init__.py  config_manager.py  daisy_sms.py  mail_tm.py  mapquest_address.py  sms_monitor.py
export/src/customer_daisy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: App.tsx  config_manager.py  customer_db.py  index.css  mail_tm.py  mapquest_address.py
(+48 files in other folders)
